--- a/index.html
+++ b/index.html
@@ -1,2 +1,14 @@
-cd $HOME/progate_path/deploy_github_pages/deploy_github_pages
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My GitHub Pages Site</title>
+</head>
+<body>
+    <h1>Welcome to My GitHub Pages Site</h1>
+    <p>This is my first GitHub Pages deployment!</p>
+</body>
+</html>
+
 
